fixing mobile nav overflowing screen width

--- a/styles/main.css
+++ b/styles/main.css
@@ -252,7 +252,7 @@ small{
     }
 }
 .mobile{
-    width: 100vw;
+    width: 100%;
     padding: 0;
     margin: 0;
     border-top: .2px solid  #dbdbdb;
